[package]
name = "seedle-derive"
version = "0.0.1"
authors = ["Thomas Chiantia <thomas@altronix.com>"]
keywords = ["minicbor", "cbor", "cddl", "codegen"]
edition = "2021"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
minicbor = { workspace = true }
seedle-extra = { workspace = true, features = ["c", "rust", "typescript"] }

[lib]
proc-macro = true
