[package]
name = "seedle-derive"
version = "0.0.1"
authors = ["Thomas Chiantia <thomas@altronix.com>"]
keywords = ["minicbor", "cbor", "cddl", "codegen"]
edition = "2021"

[dependencies]
seedle-parser = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
heck = { workspace = true }
indoc = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
minicbor = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde = { workspace = true }
seedle-extra = { workspace = true, features = ["c", "rust", "typescript"] }

[lib]
proc-macro = true
