[package]
name = "seedle-parser"
version = "0.0.1"
authors = ["Thomas Chiantia <thomas@altronix.com>"]
keywords = ["minicbor", "cbor", "cddl", "codegen"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
cddl-cat = { workspace = true }
liquid-core = { workspace = true, optional = true }

[features]
liquid = ["dep:liquid-core"]
